--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -22,6 +22,18 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true" />
 
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
+        android:layout_below="@+id/editText"
+        android:paddingTop="16dp"
+        android:layout_centerHorizontal="true" />
+
     <Button
         android:text="@string/saveButton"
         android:layout_width="wrap_content"
